[package]
name = "control_flow"
version = "0.1.0"
authors = ["csruiliu <rui.liu@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "if_statement"
path = "src/if_statement.rs"

[[example]]
name = "while_loop"
path = "src/while_loop.rs"

[[example]]
name = "match_statement"
path = "src/match_statement.rs"

[[example]]
name = "combination_lock"
path = "src/combination_lock.rs"
