[package]
name = "lifetime_memory"
version = "0.1.0"
authors = ["csruiliu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "ownership"
path = "src/ownership.rs"

[[example]]
name = "borrowing"
path = "src/borrowing.rs"

[[example]]
name = "lifetime"
path = "src/lifetime.rs"

[[example]]
name = "lifetime_structure_impl"
path = "src/lifetime_structure_impl.rs"

[[example]]
name = "reference_counted"
path = "src/reference_counted.rs"