[package]
name = "traits"
version = "0.1.0"
authors = ["csruiliu <rui.liu@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "traits"
path = "src/traits.rs"

[[example]]
name = "trait_parameters"
path = "src/trait_parameters.rs"

[[example]]
name = "into"
path = "src/into.rs"

[[example]]
name = "drop"
path = "src/drop.rs"

[[example]]
name = "operator_overloading"
path = "src/operator_overloading.rs"

[[example]]
name = "static_dispatch"
path = "src/static_dispatch.rs"